# MGod_SmartWatch_S3_v8

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MGod_SmartWatch_S3_v8.code-workspace  README.md  partitions.csv  sdkconfig
components/lvgl_project/: CMakeLists.txt  lv_project.h
components/lvgl_project/assets/imgs/: bmp_tianqi_40x40_0.c
components/lvgl_project/lv_game_2048/: lv_game_2048.c  lv_game_2048.h
components/lvgl_project/lv_hint/: lv_hint.c  lv_hint.h  lv_rollmsg.c  lv_rollmsg.h
components/lvgl_project/lv_setup/: lv_setup.c  lv_setup.h
components/lvgl_project/lv_watchfaces/: lv_watchfaces.c  lv_watchfaces.h
components/lvgl_project/lv_watchfaces/analog_81/: analog_81.c  analog_81.h  items.txt
components/lvgl_project/lv_watchfaces/analog_81/assets/: face_analog_81_dial_img_0_2808.c  face_analog_81_dial_img_1_1124.c  face_analog_81_dial_img_24_137120.c  face_analog_81_dial_img_40_226768.c  face_analog_81_dial_img_8_72438.c  face_analog_81_dial_img_preview.c
components/lvgl_project/lv_watchfaces/analog_nike/: analog_nike.c  analog_nike.h  items.txt
components/lvgl_project/lv_watchfaces/analog_nike/assets/: face_analog_nike_dial_img_0_154255.c  face_analog_nike_dial_img_19_154109.c  face_analog_nike_dial_img_1_75220.c  face_analog_nike_dial_img_3_128886.c  face_analog_nike_dial_img_48_73266.c  face_analog_nike_dial_img_49_135891.c  face_analog_nike_dial_img_4_130643.c  face_analog_nike_dial_img_50_134745.c  face_analog_nike_dial_img_51_132583.c  face_analog_nike_dial_img_52_131377.c  face_analog_nike_dial_img_53_133693.c  face_analog_nike_dial_img_54_153059.c  face_analog_nike_dial_img_55_127790.c  face_analog_nike_dial_img_56_129607.c  face_analog_nike_dial_img_57_46486.c  face_analog_nike_dial_img_62_135751.c  face_analog_nike_dial_img_63_128895.c  face_analog_nike_dial_img_8_136825.c  face_analog_nike_dial_img_preview.c
components/lvgl_project/lv_watchfaces/analog_starcraft2/: analog_starcraft2.c  analog_starcraft2.h  items.txt
components/lvgl_project/lv_watchfaces/analog_starcraft2/assets/: face_analog_starcraft2_dial_img_0_1164.c  face_analog_starcraft2_dial_img_10_70776.c  face_analog_starcraft2_dial_img_26_135458.c  face_analog_starcraft2_dial_img_42_229134.c  face_analog_starcraft2_dial_img_6_226580.c  face_analog_starcraft2_dial_img_8_340653.c  (+2 more)
components/lvgl_project/lv_watchfaces/dial_astronaut/: dial_astronaut.c  dial_astronaut.h  items.txt
components/lvgl_project/lv_watchfaces/dial_astronaut2/: dial_astronaut2.c  dial_astronaut2.h  items.txt
components/lvgl_project/lv_watchfaces/dial_astronaut3/: dial_astronaut3.c  dial_astronaut3.h  items.txt
components/lvgl_project/lv_watchfaces/dial_blackboard/: dial_blackboard.c  dial_blackboard.h  items.txt
components/lvgl_project/lv_watchfaces/dial_dog/: dial_dog.c  dial_dog.h  items.txt
components/lvgl_project/lv_watchfaces/dial_filled/: dial_filled.c  dial_filled.h  items.txt
components/lvgl_project/lv_watchfaces/dial_lockscreen/: dial_lockscreen.c  dial_lockscreen.h  items.txt
components/lvgl_project/lv_watchfaces/dial_oldperson/: dial_oldperson.c  dial_oldperson.h  items.txt
components/lvgl_project/lv_watchfaces/dial_rabbit/: dial_rabbit.c  dial_rabbit.h  items.txt
components/system/: CMakeLists.txt
components/system/sht3x/: sht3x.c  sht3x.h
components/system/system_config/: system_config.c  system_config.h
components/system/system_time/: system_time.c  system_time.h
components/system/wifi/: wifi.c  wifi.h
components/system/wm8978/: wm8978.c  wm8978.h
(+214 files in other folders)
