idf_component_register(SRC_DIRS
                        "."
                        "lv_game_2048"
                        "lv_hint"
                        "assets"
                        INCLUDE_DIRS
                        "."
                        "lv_game_2048"
                        "lv_hint"
                        REQUIRES main lvgl_porting
                      )