idf_component_register(SRC_DIRS
                        "."
                        "lv_game_2048"
                        "lv_hint"
                        "assets"
                        "lv_watchfaces/analog_81"
                        "lv_watchfaces/analog_81/assets"
                        "lv_watchfaces/analog_nike"
                        "lv_watchfaces/analog_nike/assets"
                        "lv_watchfaces/analog_starcraft2"
                        "lv_watchfaces/analog_starcraft2/assets"
                        "lv_watchfaces/dial_astronaut"
                        "lv_watchfaces/dial_astronaut/assets"
                        "lv_watchfaces/dial_astronaut2"
                        "lv_watchfaces/dial_astronaut2/assets"
                        # "lv_watchfaces/dial_astronaut3"
                        # "lv_watchfaces/dial_astronaut3/assets"
                        "lv_watchfaces/dial_dog"
                        "lv_watchfaces/dial_dog/assets"
                        "lv_watchfaces/dial_filled"
                        "lv_watchfaces/dial_filled/assets"
                        "lv_watchfaces/dial_lockscreen/"
                        "lv_watchfaces/dial_lockscreen/assets"
                        "lv_watchfaces/dial_oldperson"
                        "lv_watchfaces/dial_oldperson/assets"
                        "lv_watchfaces/dial_rabbit"
                        "lv_watchfaces/dial_rabbit/assets"
                        "lv_watchfaces/dial_blackboard"
                        "lv_watchfaces/dial_blackboard/assets"
                        INCLUDE_DIRS
                        "."
                        "lv_watchfaces"
                        "lv_watchfaces/analog_81"
                        "lv_watchfaces/dial_rabbit"
                        "lv_watchfaces/analog_nike"
                        "lv_watchfaces/analog_starcraft2"
                        "lv_watchfaces/dial_astronaut"
                        "lv_watchfaces/dial_astronaut2"
                        # "lv_watchfaces/dial_astronaut3"
                        "lv_watchfaces/dial_dog"
                        "lv_watchfaces/dial_filled"
                        "lv_watchfaces/dial_lockscreen/"
                        "lv_watchfaces/dial_oldperson"
                        "lv_watchfaces/dial_rabbit"
                        "lv_watchfaces/dial_blackboard"
                        "lv_game_2048"
                        "lv_hint"
                        REQUIRES main lvgl_porting system_time
                      )